# Kata

./: .gitignore  Cargo.toml  current_fails.txt  current_oks.txt  debug_math.txt  debug_math2.txt  debug_output.txt  dump_debug.txt  dump_mock.txt  dump_tast.txt  dump_tast2.txt  exp_debug.txt  kata_entry.c  mock_math  out.txt  print_ast.rs  print_debug.sh  print_env.kata  print_exports.sh  print_exports2.sh  print_exports3.sh  print_exports4.sh  print_tokens.rs  repro_parser.kata  run_examples.sh  run_manual.sh  tast.out  test.kata  test_chumsky.rs  test_echo.kata  test_syntax.rs  test_tensor.rs  test_text  test_text.kata
docs/: Kata-lang Specs Draft.md  PRD-ArrumacaoCasa-Fase1-6.md  PRD-Fase1.md  PRD-Fase2.md  PRD-Fase3.md  PRD-Fase4.md  PRD-Fase5.md  PRD-Fase6.5-Iterable.md  PRD-Fase6.md  PRD-Phase5-6-Completion.md  ROADMAP.md  reboot.md
examples/: test.kata  test2fail_fibonacci.kata  test2fail_purity.kata  test2fail_recr.kata  test_array.kata  test_assert.kata  test_channel_ops.kata  test_channel_send_recv.kata  test_channels.kata  test_coercion.kata  test_commutative.kata  test_concurrency.kata  test_curr.kata  test_debug.kata  test_dispatch.kata  test_enum.kata  test_fatorial.kata  test_fibonacci.kata  test_fizzbuzz.kata  test_fizzbuzz_list.kata  test_float_simple.kata  test_imc.kata  test_imports.kata  test_indexing.kata  test_is_prime.kata  test_log.kata  test_log_error.kata  test_main.kata  test_match_exhaust.kata  test_maxmin.kata  test_mixed.kata  test_nested_patterns.kata  test_pattern_simple.kata  test_phase10.kata  test_phase8_stdlib.kata  test_phase9.kata  test_purity.kata  test_quicksort.kata  test_range_simple.kata  test_range_step.kata  (+13 more)
src/: errors.rs  main.rs  module_loader.rs
src/cli/: mod.rs
src/codegen/: action_state.rs  action_step.rs  (+8 more)
(+61 files in other folders)
