[package]
name = "kata"
version = "0.1.0"
edition = "2021"
authors = ["Arthur Julião"]
description = "Kata Language"

[dependencies]
rustyline = "13.0"
miette = { version = "7.2.0", features = ["fancy"] }
thiserror = "1.0"
chumsky = "0.9.3"
rustyline-derive = "0.11.1"
id-arena = "2.3.0"
cranelift-jit = "0.103.0"
cranelift-module = "0.103.0"
cranelift-native = "0.103.0"
cranelift-codegen = "0.103.0"
cranelift-frontend = "0.103.0"
cranelift-object = "0.103.0"
log = "0.4"
env_logger = "0.11"
once_cell = "1.19"
ariadne = "0.6.0"
clap = { version = "4.6.0", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
bumpalo = "3.20.2"
wasmtime-fiber = "34.0.2"
dashmap = "6.1.0"
